--- a/templates/dashboard.ejs
+++ b/templates/dashboard.ejs
@@ -14,27 +14,62 @@
 
         <div id="form-container">
             <h1><%= greeting %>, <%= user.firstName %>!</h1>
-
             <p class="center-text">Ready to track your habits today?</p>
-
-            <p class="center-text"><%- weather %></p>
-
-            <p class="center-text">Have a great day!</p>
         </div>
 
         <div class="widgets-grid">
-            <div class="widget-card weather-widget">
+            <div class="widget-card" id="weatherWidget">
                 <div class="widget-header">
                     <h3>Weather</h3>
-                    <span>Potomac, MD</span>
+                </div>
+                <div class="weather-content">
+                    <div class="weather-main">
+                        <span id="weatherLocation"><%= weather.location %>:</span>
+                        <span id="temp"><%= weather.temp %>°</span>
+                    </div>
+                    <div class="weather-details">
+                        <p id="weatherCondition"><%= weather.condition %></p>
+                        <p id="highLowTemps">H: <%= weather.high %>° • L: <%= weather.low %>°</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="widget-card" id="toDoWidget">
+                <div class="widget-header">
+                    <h3>Tasks (WIP)</h3>
                 </div>
 
-                <div class="weather-content">
+                <div class="widget-body">
+                    <span class="big-stat">0</span>
+                    <p class="stat-label">Tasks remaining</p>
+                </div>
+            </div>
 
+            <div class="widget-card" id="moneyWidget">
+                <div class="widget-header">
+                    <h3>Money (WIP)</h3>
+                    
+                </div>
+
+                <div class="widget-body">
+                    <span class="big-stat">$0</span>
+                    <p class="stat-label">Daily Spend</p>
+                </div>
+            </div>
+
+            <div class="widget-card" id="wearablesWidget">
+                <div class="widget-header">
+                    <h3>Wearables (WIP)</h3>
+                    
+                </div>
+                <div class="widget-body">
+                    <span class="big-stat">--</span>
+                    <p class="stat-label">Steps today</p>
                 </div>
             </div>
         </div>
-        
+
+
     </div>
 
     <script src="/js/main.js"></script>
