update zipcode onboarding formatting

--- a/templates/settings.ejs
+++ b/templates/settings.ejs
@@ -188,7 +188,7 @@
                                 <span class="tile-label" style="margin-bottom: 15px;">Zipcode</span>
 
                                 <fieldset class="date-fieldset">
-                                    <input type="number" id="zipcode" name="zipcode" value="<%= user.zipcode %>" placeholder="12345" minlength="5" maxlength="5" class="fieldset-input">
+                                    <input type="number" id="zipcodeSettings" name="zipcode" value="<%= user.zipcode %>" placeholder="12345" minlength="5" maxlength="5" class="fieldset-input">
                                 </fieldset>
                                 <div class="edit-actions">
                                     <button type="button" class="btn-cancel" onclick="closeEdit('zipcodeTile', event)">Cancel</button>
