debugging forgot password

--- a/templates/forgotPassword.ejs
+++ b/templates/forgotPassword.ejs
@@ -11,7 +11,7 @@
     <div id="form-container">
         <h1>Forgot your password?</h1>
         <p class="center-text">Let us send you a reset link.</p>
-        <form action="forgot-password" method="post">
+        <form action="/forgot-password" method="post">
             Email<br><input type="email" id="email" name="email" placeholder="Enter your email" class="input-val" required>
             <input type="submit" class="btn" value="Reset Password">
         </form>
