figured out that nodemailer doesn't work with Render free tier

--- a/templates/forgotPassword.ejs
+++ b/templates/forgotPassword.ejs
@@ -15,17 +15,22 @@
             Email<br><input type="email" id="email" name="email" placeholder="Enter your email" class="input-val" required>
             <input type="submit" class="btn" value="Reset Password">
         </form>
+        <br>
         <% if (locals.message) { %>
             <div class="alert-success">
-                <%= message %>
+                <p class="center-text"> <%= message %> </p>
             </div>
         <% } %>
 
         <% if (locals.error) { %>
             <div class="alert-error">
-                <%= error %>
+                <p class="center-text"> <%= error %> </p>
             </div>
         <% } %>
+        <br>
+        <a href="/login" class="a-btn">Sign in</a>
+        <br>
+       <p class="center-text"><strong>Note: </strong>Unfortunately nodemailer does not work with Render under the free tier. See functionality in the demo video.</p>
     </div>
 </body>
 
